--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -34,12 +34,15 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #488aff,
-  secondary:  #32db64,
-  danger:     #f53d3d,
+  primary:    #3d1d38,
+  secondary:  #2c1e3a,
+  danger:     #4f2630,
   light:      #f4f4f4,
   dark:       #222
 );
+
+$text-color: #fafafa;
+$background-color: #19181b;
 
 
 // App iOS Variables
