--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -19,3 +19,10 @@
 //   background-color: color($colors, dark);
 //   color: color($colors, light);
 // }
+
+div.smallbox {
+  min-height: 75px;
+  min-width: 75px;
+  max-height: 100px;
+  max-width: 150px;
+}
