Settings page remembers your current max size setting

--- a/src/pages/gallery/gallery.scss
+++ b/src/pages/gallery/gallery.scss
@@ -1,3 +1,13 @@
 page-gallery {
 
 }
+div.gallerybox {
+  min-height: 75px;
+  min-width: 75px;
+  max-height: 100px;
+  max-width: 20%;
+}
+div.palette {
+  overflow: hidden;
+  position: relative;
+}
